<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_gravity="center_vertical"
    android:layout_centerInParent="true"
    android:background="@color/colorWhite"
    android:elevation="10dp"
    app:layout_constraintCircleRadius="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:text="Ingresar"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/actionNamePerson"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_email"
        android:layout_margin="@dimen/padding_bottom"
        android:layout_marginTop="@dimen/padding_bottom"
        app:boxBackgroundColor="@color/background_color"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/titleInput"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textSize="@dimen/size_text_input"
            app:errorEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/actionSurnamePerson"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        android:layout_margin="@dimen/padding_bottom"
        android:layout_marginTop="@dimen/padding_bottom"
        app:boxBackgroundColor="@color/background_color"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/actionNamePerson"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword|textImeMultiLine"
            android:padding="10dp"
            android:textSize="@dimen/size_text_input"
            app:errorEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveNamePerson"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="signIn"
        android:text="@string/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionSurnamePerson"/>

</androidx.constraintlayout.widget.ConstraintLayout>