<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".Expense">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorWhite"
        android:layout_centerInParent="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorWhite"
                android:elevation="10dp"
                app:layout_constraintCircleRadius="5dp">

                <TextView
                    android:id="@+id/titleBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:textSize="20dp"
                    android:text="Ingresos registrados"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/balanceExpense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_horizontal"
                    android:textSize="20dp"
                    android:text="S/. 0.00"
                    app:layout_constraintTop_toBottomOf="@+id/titleBalance"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorWhite"
                android:elevation="10dp"
                app:layout_constraintCircleRadius="5dp"
                app:layout_constraintTop_toBottomOf="@id/containerBalance"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/titleExpense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:textSize="20dp"
                    android:text="Registro de Egresos"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/actionTypeIncome"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_income"
                    android:layout_margin="@dimen/padding_bottom"
                    android:layout_marginTop="@dimen/padding_bottom"
                    app:boxBackgroundColor="@color/background_color"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@id/titleExpense"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/typeIncome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:onClick="selectedTypeIncome"
                        android:padding="10dp"
                        android:focusable="false"
                        android:textSize="@dimen/size_text_input"
                        app:errorEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/actionConceptExpense"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/concept_expense"
                    android:layout_margin="@dimen/padding_bottom"
                    android:layout_marginTop="@dimen/padding_bottom"
                    app:boxBackgroundColor="@color/background_color"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@id/actionTypeIncome"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/conceptExpense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:onClick="selectedConceptExpense"
                        android:padding="10dp"
                        android:focusable="false"
                        android:textSize="@dimen/size_text_input"
                        app:errorEnabled="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/actionAmountExpense"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount_income"
                    android:layout_margin="@dimen/padding_bottom"
                    android:layout_marginTop="@dimen/padding_bottom"
                    app:boxBackgroundColor="@color/background_color"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@id/actionConceptExpense"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/amountExpense"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textSize="@dimen/size_text_input"
                        app:errorEnabled="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/saveExpense"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="saveExpense"
                    android:text="@string/save_button"
                    app:layout_constraintTop_toBottomOf="@id/actionAmountExpense"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>